Updated to use new XMLDocument property methods